--- a/Outdoor&more.html
+++ b/Outdoor&more.html
@@ -95,6 +95,7 @@
                     </div>
                 </li> -->
                 <!-- <a class="logoss" href="index.html"><strong>Home</strong></a> -->
+                <a class="text-white" href="index.html"><strong>Home</strong></a> <br>
                 <li class="nav-item dropdown py-2 d-none d-md-inline-block">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Wedding&More</a>
@@ -164,7 +165,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/outdoor1.jpg" id="Weeding Photographers" alt="">
+                                <img src="image/outdoor1.jpg" id="Weeding Photographers" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Outdoor Photographers</text>
                             </svg>
@@ -187,7 +188,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/outdoor2.jpg" alt="">
+                                <img src="image/outdoor2.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Outdoor Photographers</text>
                             </svg>
@@ -210,7 +211,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/outdoor3.jpg" alt="">
+                                <img src="image/outdoor3.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">
                                     Outdoor Photographers</text>
@@ -246,7 +247,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/photo1.jpg" alt="">
+                                <img src="image/photo1.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Video Shooting Photographers</text>
                             </svg>
@@ -269,7 +270,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/photo2.jpg" alt="">
+                                <img src="image/photo2.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Video Shooting Photographers</text>
                             </svg>
@@ -292,7 +293,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/photo3.jpg" alt="">
+                                <img src="image/photo3.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Video Shooting Photographers</text>
                             </svg>
