--- a/Wedding&more.html
+++ b/Wedding&more.html
@@ -99,6 +99,7 @@
                     </div>
                 </li> -->
                 <!-- <a class="logoss" href="index.html"><strong>Home</strong></a> -->
+                <a class="text-white" href="index.html"><strong>Home</strong></a> <br>
                 <li class="nav-item dropdown py-2 d-none d-md-inline-block">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Events&More</a>
@@ -167,7 +168,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/wedding1.jpg" id="Weeding Photographers" alt="">
+                                <img src="image/wedding1.jpg" id="Weeding Photographers" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Weeding Photographers</text>
                             </svg>
@@ -190,7 +191,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/Wedding2.jpg" alt="">
+                                <img src="image/Wedding2.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Weeding Photographers</text>
                             </svg>
@@ -213,7 +214,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/Wedding3.jpg" alt="">
+                                <img src="image/Wedding3.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">
                                     Weeding Photographers</text>
@@ -249,7 +250,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/fashion1.jpg" alt="">
+                                <img src="image/fashion1.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Fashion Photographers</text>
                             </svg>
@@ -272,7 +273,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/fashion2.jpg" alt="">
+                                <img src="image/fashion2.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Fashion Photographers</text>
                             </svg>
@@ -295,7 +296,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/fashion3.jpg" alt="">
+                                <img src="image/fashion3.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Fashion Photographers</text>
                             </svg>
@@ -329,7 +330,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/model1.jpg" alt="">
+                                <img src="image/model1.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">
                                     Model Photographers</text>
@@ -353,7 +354,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/model2.jpg" alt="">
+                                <img src="image/model2.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">
                                     Model Photographers</text>
@@ -377,7 +378,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/model3.jpg" alt="">
+                                <img src="image/model3.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em"></text>
                                     Model Photographers</text>
