--- a/Events&more.html
+++ b/Events&more.html
@@ -95,6 +95,7 @@
                     </div>
                 </li> -->
                 <!-- <a class="logoss" href="index.html"><strong>Home</strong></a> -->
+                <a class="text-white" href="index.html"><strong>Home</strong></a> <br>
                 <li class="nav-item dropdown py-2 d-none d-md-inline-block">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">Wedding&More</a>
@@ -163,7 +164,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/event1.jpg" id="Weeding Photographers" alt="">
+                                <img src="image/event1.jpg" id="Weeding Photographers" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Event Photographers</text>
                             </svg>
@@ -186,7 +187,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/event2.jpg" alt="">
+                                <img src="image/event2.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Event Photographers</text>
                             </svg>
@@ -209,7 +210,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/event3.jpg" alt="">
+                                <img src="image/event3.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">
                                     Event Photographers</text>
@@ -243,7 +244,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/corporate1.jpg" alt="">
+                                <img src="image/corporate1.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Corporate Photographers</text>
                             </svg>
@@ -266,7 +267,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/corporate2.jpg" alt="">
+                                <img src="image/corporate2.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Corporate Photographers</text>
                             </svg>
@@ -289,7 +290,7 @@
                                 xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
                                 focusable="false" role="img" aria-label="Placeholder: Thumbnail">
                                 <title>Placeholder</title>
-                                <img src="images/corporate3.jpg" alt="">
+                                <img src="image/corporate3.jpg" alt="">
                                 <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                     dy=".3em">Corporate Photographers</text>
                             </svg>
